add passwords hashing
